fix: ugly label/epoch alignments

--- a/style.css
+++ b/style.css
@@ -9,11 +9,15 @@ body {
 #epochs {
   display:grid;
   grid-template-columns: auto auto;
+  grid-gap: 10px 45px;
+}
+.epoch-label {
+  text-align: right;
 }
 .epoch {
   background-color: black;
-  height: 10px;
-  margin: 10px 0;
+  height: 100%;
+  margin: 0;
 }
 #modal {
   position: fixed;
